--- a/manage/package.json
+++ b/manage/package.json
@@ -11,12 +11,14 @@
     "@arco-design/web-react": "^2.31.3",
     "axios": "^0.26.1",
     "less": "^4.1.2",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@types/qs": "^6.9.7",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
