--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ build:
     script:
         - yarn install
         - yarn build:${CI_COMMIT_REF_NAME}
-        - docker build -t kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME} .
-        - docker push kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
+        - docker build -t tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME} .
+        - docker push tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
     # after_script:
     #   - docker rmi $(docker images -f dangling=true -q)
 
@@ -34,8 +34,8 @@ build_release:
     script:
         - yarn install
         - yarn build
-        - docker build -t kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME} .
-        - docker push kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
+        - docker build -t tcr.kxsz.net/web/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME} .
+        - docker push tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
 
 deploy_develop:
     stage: deploy
@@ -49,7 +49,7 @@ deploy_develop:
         - mkdir -p /opt/${CI_PROJECT_NAME}/logs && mkdir -p /opt/${CI_PROJECT_NAME}/config
         - cp docker-compose*.yml /opt/${CI_PROJECT_NAME}/
         - cd /opt/${CI_PROJECT_NAME}
-        - docker pull kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
+        - docker pull tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
         - docker-compose down
         - IMAGETAG=${CI_COMMIT_REF_NAME} docker-compose up -d
 
@@ -65,19 +65,6 @@ deploy_test:
         - mkdir -p /opt/${CI_PROJECT_NAME}/logs && mkdir -p /opt/${CI_PROJECT_NAME}/config
         - cp docker-compose*.yml /opt/${CI_PROJECT_NAME}/
         - cd /opt/${CI_PROJECT_NAME}
-        - docker pull kexin.tencentcloudcr.com/admin/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
+        - docker pull tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
         - docker-compose down
         - IMAGETAG=${CI_COMMIT_REF_NAME} docker-compose up -d
-#deploy_publish:
-#  stage: deploy
-#  only:
-#    - test
-#  tags:
-#    - shell
-#    - qcloud
-#    - kubectl
-#  script:
-#    - kubectl -n test delete configmap ${CI_PROJECT_NAME}
-#    - kubectl -n test create configmap ${CI_PROJECT_NAME} --from-file=config/test.json
-#    - kubectl -n test set env deployment --env="LAST_MANUAL_RESTART=$(date +%s)" ${CI_PROJECT_NAME}
-#
