更新.gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,12 @@ deploy_test:
         - docker pull tcr.kxsz.net/web/${CI_PROJECT_NAME}:${CI_COMMIT_REF_NAME}
         - docker-compose down
         - IMAGETAG=${CI_COMMIT_REF_NAME} docker-compose up -d
+
+deploy_master:
+    stage: deploy
+    only:
+      - master
+    trigger: internal/note-admin
 #deploy_publish:
 #  stage: deploy
 #  only:
