--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build:develop": "tsc && vite build --mode develop",
     "build:test": "tsc && vite build --mode test",
+    "build:master": "tsc && vite build --mode production",
     "build": "tsc && vite build --mode production",
     "preview": "vite preview"
   },
